--- a/AQuarterScreen/app/src/main/res/values/strings.xml
+++ b/AQuarterScreen/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">AQuarterScreen</string>
+    <string name="title_1">Text composable\n</string>
+    <string name="des_1">Displays text and follows the recommended Material Design guidelines.\n</string>
+    <string name="title_2">Image composable\n</string>
+    <string name="des_2">Creates a composable that lays out and draws a given Painter class object.\n</string>
+    <string name="title_3">Row composable\n</string>
+    <string name="des_3">A layout composable that places its children in a horizontal sequence.\n</string>
+    <string name="title_4">Column composable\n</string>
+    <string name="des_4">A layout composable that places its children in a vertical sequence.\n</string>
 </resources>
